# youtube-whisper-deepseek-pipeline

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  download_best_video.ps1  package_course.py  pyproject.toml  requirements.txt  setup.ps1  setup_gpu.ps1  urls.example.txt
youtube_translator/: audio.py  cli.py  doctor.py  downloader.py  models.py  pipeline.py  profiles.py  qa.py  segments.py  subtitles.py  transcriber.py  translator.py  utils.py  whispercpp.py
